<resources>
    <string name="app_name">EnsakABS</string>
    <string name="ENSAK">ENSAK</string>
    <string name="passwordFieldHint">    Password</string>
    <string name="usernameFieldHint"> Username</string>
    <string name="loginButton">LOGIN</string>
    <string name="ABS">ABS</string>
    <string name="title_activity_navigation_drawer_etudiant">Actualités</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_etudiant_actualites">Actualités</string>
    <string name="navigation_etudiant_historique">Historique</string>
    <string name="navigation_etudiant_absenseAJ">Absence(s) à justifier</string>
    <string name="navigation_etudiant_logout">Déconnexion</string>
    <string name="navigation_etudiant_about">À propos</string>

    <string name="navigation_etudiant_nom">Nom Prénom</string>
    <string name="navigation_etudiant_section">ENSAK - Génie Logiciel</string>
    <string name="AbsenceNonJ">Absence non justifiée</string>
    <string name="AbsenceJ">Absence justifiée</string>
    <string name="AbsenceEnAtt">Absence en attente de justification</string>
    <string name="justif_absence_refused">Votre justification d\'absence a été refusée</string>
    <string name="Justification_de_date">Justfication de l\'absence </string>
    <string name="nom_seance">du 17/05/2017</string>
    <string name="envoyer">Envoyer</string>
    <string name="dont_show_again">Ok, ne plus afficher</string>
    <string name="dialog_contester">23/65 étudiants ont contesté cette séance de rattrapage, êtes vous sûr de vouloir la contester?</string>
    <string name="contester">Contester</string>
    <string name="annuler">Annuler</string>
    <string name="justif_absence_dialog">Après avoir cliquer sur une absence, vous serez invités à uploader un document afin de la justifier</string>
    <string name="title_activity_navigation_drawer_prof">NavigationDrawerProf</string>
    <string name="navigation_prof_faireAppel">Faire l\'appel</string>
    <string name="navigation_prof_rattrapage">Planifier un rattrapage</string>

    <string-array name="name">
        <item>iliass elamrani</item>
        <item>Mehdi lamrini</item>
        <item>Mohamed lyazidi</item>
        <item>Hamza kania</item>
        <item>Hamid lbrntek</item>
        <item>oussama bouzoubaa</item>
        <item>yousra mouhou</item>

    </string-array>

</resources>
